--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.6.4",
         "pg": "^7.11.0",
         "sequelize": "^5.10.1"
     }
