Adicionado campo 'Total' na tabela de vendas e consertado get do pedido onde não trazia o usuário

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 PORT=3500
-KEY=MHTS
+KEY=AJS89ASJDS
+
+#Dados de conexão do banco
+DBPORT = 5432
+HOST = 127.0.0.1
+USR = docker
+PWD = docker
+DB = simple_sales
+DIALECT = postgres
