--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "import/no-dynamic-require": "off",
         "no-param-reassign": "off",
         "func-names": "off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "linebreak-style": "off"
     }
 }
