--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
+        "express-validation": "^1.0.2",
+        "joi": "^14.3.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.6.4",
         "pg": "^7.11.0",
-        "sequelize": "^5.10.1"
+        "sequelize": "^5.10.1",
+        "youch": "^2.0.10"
     }
 }
