--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
+        "express-async-handler": "^1.1.4",
         "express-validation": "^1.0.2",
         "joi": "^14.3.1",
         "jsonwebtoken": "^8.5.1",
